objects/LeadProcessConfiguration__c.object
<CustomObject>
    <description>R8 - object to store configuration of lead processes e.g. web2lead to external system assignment etc.</description>
    <fields>
        <fullName>AlertId__c</fullName>
        <label>Alert Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedBy__c</fullName>
        <label>Approved By</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <globalPicklist>Business_Unit</globalPicklist>
        <label>Business Unit</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CID__c</fullName>
        <label>CID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EmailTemplateName__c</fullName>
        <label>Email Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExcludedValue__c</fullName>
        <label>Excluded Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSystem__c</fullName>
        <label>External System</label>
        <picklist>
            <picklistValues>
                <fullName>ATURB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflict Minerals</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadRecordTypeDevName__c</fullName>
        <label>Lead Record Type Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadStatus__c</fullName>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NoCID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No CID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeDevName__c</fullName>
        <label>RecordTypeDevName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalContact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Technical Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Lead Process Configurations</relationshipLabel>
        <relationshipName>LeadProcessConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniquenessCheck__c</fullName>
        <label>UniquenessCheck</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UnqualifyReason__c</fullName>
        <description>Unqualifying Reason</description>
        <label>Unqualifying Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Process Configuration</label>
    <listViews>
        <fullName>CCWeb2Lead</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>NoCID__c</columns>
        <columns>ExternalSystem__c</columns>
        <columns>BusinessUnit__c</columns>
        <columns>CID__c</columns>
        <columns>CategoryName__c</columns>
        <columns>Country__c</columns>
        <columns>AlertId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.CCWeb2Lead</value>
        </filters>
        <label>CCWeb2Lead</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CorporateCategories</fullName>
        <columns>NAME</columns>
        <columns>CID__c</columns>
        <columns>CategoryName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.CorporateCategory</value>
        </filters>
        <label>Corporate Categories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EmailSetting</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>AlertId__c</columns>
        <columns>EmailTemplateName__c</columns>
        <columns>TechnicalContact__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.EmailSetting</value>
        </filters>
        <label>Email Setting</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ExternalSystems</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ExternalSystem__c</columns>
        <columns>EmailTemplateName__c</columns>
        <columns>TechnicalContact__c</columns>
        <columns>SortOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.ExternalSystem</value>
        </filters>
        <label>External Systems</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SelectionCriteria</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LeadRecordTypeDevName__c</columns>
        <columns>LeadStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.SelectionCriteria</value>
        </filters>
        <label>Selection Criteria</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SpamFilter</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ExcludedValue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LeadProcessConfiguration__c.SpamFilter</value>
        </filters>
        <label>Spam Filter</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LPC-{0000000000}</displayFormat>
        <label>LeadProcessConfiguration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Process Configurations</pluralLabel>
    <recordTypes>
        <fullName>CCWeb2Lead</fullName>
        <active>true</active>
        <label>CCWeb2Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>CorporateCategory</fullName>
        <active>true</active>
        <label>Corporate Category</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmailSetting</fullName>
        <active>true</active>
        <label>Email Setting</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExternalSystem</fullName>
        <active>true</active>
        <label>External System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Migration</fullName>
        <active>true</active>
        <label>Migration</label>
    </recordTypes>
    <recordTypes>
        <fullName>SelectionCriteria</fullName>
        <active>true</active>
        <label>Selection Criteria</label>
    </recordTypes>
    <recordTypes>
        <fullName>SpamFilter</fullName>
        <active>true</active>
        <label>Spam Filter</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCWeb2LeadNoCID</fullName>
        <active>true</active>
        <description>R8 - NoCID conditions for CCWeb2Lead record type.</description>
        <errorConditionFormula>NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c) &amp;&amp; NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)&amp;&amp;
(RecordType.DeveloperName=&apos;CCWeb2Lead&apos; &amp;&amp; NoCID__c = true &amp;&amp; (NOT(ISBLANK(CID__c)) || NOT(ISPICKVAL(ExternalSystem__c, &quot;&quot;)) 
|| NOT(ISPICKVAL(Country__c, &quot;&quot;))  || NOT(Text(BusinessUnit__c) == $CustomMetadata.MDPicklistValue__mdt.BusinessUnit_ZCCO.LastSuccessor__c)))</errorConditionFormula>
        <errorMessage>While selecting No CID configuration you cannot populate CID, External System, Country. Currently NoCID configuration is only available for &apos;ZCCO&apos; Business Unit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCWeb2LeadValidation</fullName>
        <active>true</active>
        <description>ExternalSystem is mandatory for CCWeb2Lead recordtype while selecting country.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
 RecordType.DeveloperName = &quot;CCWeb2Lead&quot;,
NOT(ISBLANK(TEXT(Country__c ))),
ISBLANK( TEXT(ExternalSystem__c ))
)</errorConditionFormula>
        <errorMessage>Please select the value for External System while selecting Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DatabaseValidation</fullName>
        <active>true</active>
        <description>R8 - required fields are missing. Please check related database settings / page layouts.</description>
        <errorConditionFormula>NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c) &amp;&amp;NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c)&amp;&amp;
((RecordType.DeveloperName=&apos;ExternalSystem&apos; &amp;&amp; 
(ISBLANK( EmailTemplateName__c) || ISPICKVAL(ExternalSystem__c,&quot;&quot;) || ISBLANK( UnqualifyReason__c)||ISBLANK(SortOrder__c)) 
) || 
(RecordType.DeveloperName=&apos;EmailSetting&apos; &amp;&amp; (ISBLANK(AlertId__c) || ISBLANK(EmailTemplateName__c))) || 
(RecordType.DeveloperName=&apos;CCWeb2Lead&apos; &amp;&amp; NoCID__c = false &amp;&amp; (ISBLANK(CID__c) || ISPICKVAL(BusinessUnit__c,&quot;&quot;))) || 
(RecordType.DeveloperName=&apos;SpamFilter&apos; &amp;&amp; ISBLANK(ExcludedValue__c)))</errorConditionFormula>
        <errorMessage>Required fields are missing. Please check related database settings / page layouts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EmailSettingValidation</fullName>
        <active>true</active>
        <description>User or Technical Contacts must be filled.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), ISBLANK( TechnicalContact__c ),RecordType.DeveloperName =&apos;EmailSetting&apos;)</errorConditionFormula>
        <errorMessage>Technical Contacts must me filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SortOrderValidation</fullName>
        <active>true</active>
        <description>R8 - the sort order can contain only numeric values.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),RecordType.DeveloperName =&apos;ExternalSystem&apos;,NOT(REGEX( SortOrder__c , &quot;[0-9]{3}&quot;)))</errorConditionFormula>
        <errorMessage>The sort order can contain only numeric values including 3 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TechnicalContactEmailValidation</fullName>
        <active>true</active>
        <description>Email Id associated with Technical Contact cannot be null for Email Setting Record Type creation.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), NOT(ISBLANK(TechnicalContact__c)),ISBLANK(TechnicalContact__r.Email))</errorConditionFormula>
        <errorMessage>Technical Contact needs to have email address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TechnicalContactForExternalSystem</fullName>
        <active>true</active>
        <description>For External User as External System technical contact should be blank otherwise it should be populated.</description>
        <errorConditionFormula>AND(NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c),NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),(RecordType.DeveloperName = &apos;ExternalSystem&apos; &amp;&amp; NOT(ISPICKVAL( ExternalSystem__c,&apos;External User&apos;)) &amp;&amp; ISBLANK(TechnicalContact__c)) || (RecordType.DeveloperName = &apos;ExternalSystem&apos; &amp;&amp; ISPICKVAL( ExternalSystem__c,&apos;External User&apos;) &amp;&amp; NOT(ISBLANK(TechnicalContact__c))))</errorConditionFormula>
        <errorMessage>For External User as External System technical contact should be blank otherwise it should be populated.</errorMessage>
    </validationRules>
</CustomObject>